force-app/main/default/objects/Opportunity/fields/EN_AluminumSupplier__c.field-meta.xml
<CustomField>
    <fullName>EN_AluminumSupplier__c</fullName>
    <label>アルミ発注先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>三協立山(東京)</fullName>
            </value>
            <value>
                <fullName>三協立山(横浜)</fullName>
            </value>
            <value>
                <fullName>三協立山(埼玉)</fullName>
            </value>
            <value>
                <fullName>三協立山(千葉)</fullName>
            </value>
            <value>
                <fullName>総伸工業</fullName>
            </value>
            <value>
                <fullName>協同サッシ</fullName>
            </value>
            <value>
                <fullName>伊藤製作所</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>