force-app/main/default/objects/Opportunity/fields/en_ankenkubun__c.field-meta.xml
<CustomField>
    <fullName>en_ankenkubun__c</fullName>
    <label>案件区分</label>
    <length>200</length>
    <type>Text</type>
</CustomField>