force-app/main/default/objects/Opportunity/fields/EN_Arankhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_Arankhanteibi__c</fullName>
    <label>Aランク判定日</label>
    <type>Date</type>
</CustomField>