force-app/main/default/objects/Opportunity/fields/EN_ARankNum__c.field-meta.xml
<CustomField>
    <fullName>EN_ARankNum__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;Aランク&apos;) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月Aランク数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>