force-app/main/default/objects/Opportunity/fields/EN_ARankTargetAmount__c.field-meta.xml
<CustomField>
    <fullName>EN_ARankTargetAmount__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;Aランク&apos;) ,en_zyutyuumokuhyougaku__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月Aランク受注目標額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>