force-app/main/default/objects/Opportunity/fields/en_ararizougenseisankingaku__c.field-meta.xml
<CustomField>
    <fullName>en_ararizougenseisankingaku__c</fullName>
    <formula>en_uriageararigaku__c  -   en_zyutyuuararigoukei__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利増減精算金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>