force-app/main/default/objects/Opportunity/fields/EN_Brankhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_Brankhanteibi__c</fullName>
    <label>Bランク判定日</label>
    <type>Date</type>
</CustomField>