force-app/main/default/objects/Opportunity/fields/EN_BRankNum__c.field-meta.xml
<CustomField>
    <fullName>EN_BRankNum__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;Bランク&apos;) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bランク数</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>