force-app/main/default/objects/Opportunity/fields/EN_Check__c.field-meta.xml
<CustomField>
    <fullName>EN_Check__c</fullName>
    <formula>OR(
    AND(
         en_ankenkubun__c  = &quot;小工事&quot;,
        CONTAINS( en_koujihinsyu__c , &quot;床&quot;)
    ),
    en_koujihinsyu__c  = &quot;内装仕上工事&quot;
)</formula>
    <label>除外判定EN</label>
    <type>Checkbox</type>
</CustomField>