force-app/main/default/objects/Opportunity/fields/EN_Crankhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_Crankhanteibi__c</fullName>
    <label>Cランク判定日</label>
    <type>Date</type>
</CustomField>