force-app/main/default/objects/Opportunity/fields/en_CurPeriodCom_ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>en_CurPeriodCom_ContractAmount__c</fullName>
    <formula>IF(  EN_kanseiki__c= TEXT(CurrentPeriod__c ),
 EN_saisyuzyutyuukingaku__c  ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期完成分_契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>