force-app/main/default/objects/Opportunity/fields/en_CurPeriodCom_ContractGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>en_CurPeriodCom_ContractGrossProfit__c</fullName>
    <formula>IF( EN_kanseiki__c= TEXT(CurrentPeriod__c ),
EN_saisyuzyutyukingaku__c ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期完成分_粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>