force-app/main/default/objects/Opportunity/fields/en_CurrentPeriod_ContractAmount__c.field-meta.xml
<CustomField>
    <fullName>en_CurrentPeriod_ContractAmount__c</fullName>
    <formula>IF(LEFT(en_zyutyuuki__c,4) = TEXT(2024 + CurrentPeriod__c - 12),
 EN_saisyuzyutyuukingaku__c ,
				null)</formula>
    <label>当期受注金額_契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>