force-app/main/default/objects/Opportunity/fields/en_CurrentPeriod_ContractGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>en_CurrentPeriod_ContractGrossProfit__c</fullName>
    <formula>IF(LEFT(en_zyutyuuki__c,4) = TEXT(2024 + CurrentPeriod__c - 12),
EN_saisyuzyutyukingaku__c ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期受注金額_粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>