force-app/main/default/objects/Opportunity/fields/en_CurrentPeriod_GrossProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>en_CurrentPeriod_GrossProfitMargin__c</fullName>
    <formula>IF ( OR(en_CurrentPeriod_ContractAmount__c = 0)
					,0
					,en_CurrentPeriod_ContractGrossProfit__c / en_CurrentPeriod_ContractAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期受注金額_粗利率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>