force-app/main/default/objects/Opportunity/fields/EN_Department__c.field-meta.xml
<CustomField>
    <fullName>EN_Department__c</fullName>
    <label>部署</label>
    <length>50</length>
    <type>Text</type>
</CustomField>