force-app/main/default/objects/Opportunity/fields/EN_Drankhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_Drankhanteibi__c</fullName>
    <label>Dランク判定日</label>
    <type>Date</type>
</CustomField>