force-app/main/default/objects/Opportunity/fields/en_gaibucode__c.field-meta.xml
<CustomField>
    <fullName>en_gaibucode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>案件番号（外部キー）</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>