force-app/main/default/objects/Opportunity/fields/en_genbastatus__c.field-meta.xml
<CustomField>
    <fullName>en_genbastatus__c</fullName>
    <label>現場ステータス</label>
    <length>200</length>
    <type>Text</type>
</CustomField>