force-app/main/default/objects/Opportunity/fields/en_kakuteiriekiritsu__c.field-meta.xml
<CustomField>
    <fullName>en_kakuteiriekiritsu__c</fullName>
    <label>確定利益率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>