force-app/main/default/objects/Opportunity/fields/EN_kanseiki__c.field-meta.xml
<CustomField>
    <fullName>EN_kanseiki__c</fullName>
    <label>完成期</label>
    <length>200</length>
    <type>Text</type>
</CustomField>