force-app/main/default/objects/Opportunity/fields/En_kanseikiText__c.field-meta.xml
<CustomField>
    <fullName>En_kanseikiText__c</fullName>
    <formula>TEXT(VALUE(EN_kanseiki__c) - 12 + 2024) &amp; &apos;年6月期&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>完成期（テキスト）</label>
    <type>Text</type>
</CustomField>