force-app/main/default/objects/Opportunity/fields/EN_kanseitsuki__c.field-meta.xml
<CustomField>
    <fullName>EN_kanseitsuki__c</fullName>
    <formula>TEXT(MONTH(en_ukeoisyunkouyoteibi__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>完成月</label>
    <type>Text</type>
</CustomField>