force-app/main/default/objects/Opportunity/fields/en_kensetuc__c.field-meta.xml
<CustomField>
    <fullName>en_kensetuc__c</fullName>
    <label>建設会社</label>
    <length>200</length>
    <type>Text</type>
</CustomField>