force-app/main/default/objects/Opportunity/fields/en_koujihinsyu__c.field-meta.xml
<CustomField>
    <fullName>en_koujihinsyu__c</fullName>
    <label>工事品種</label>
    <length>200</length>
    <type>Text</type>
</CustomField>