force-app/main/default/objects/Opportunity/fields/EN_kouryakuhoushin__c.field-meta.xml
<CustomField>
    <fullName>EN_kouryakuhoushin__c</fullName>
    <label>攻略方針</label>
    <type>TextArea</type>
</CustomField>