force-app/main/default/objects/Opportunity/fields/en_kousyuhinsyutouzyouhou__c.field-meta.xml
<CustomField>
    <fullName>en_kousyuhinsyutouzyouhou__c</fullName>
    <label>工種品種等情報</label>
    <type>TextArea</type>
</CustomField>