force-app/main/default/objects/Opportunity/fields/EN_Last2Month_mikomiflag__c.field-meta.xml
<CustomField>
    <fullName>EN_Last2Month_mikomiflag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>前々月受注見込みフラグ</label>
    <type>Checkbox</type>
</CustomField>