force-app/main/default/objects/Opportunity/fields/EN_last2Monthkuzyoukyoukoment__c.field-meta.xml
<CustomField>
    <fullName>EN_last2Monthkuzyoukyoukoment__c</fullName>
    <label>先々月の攻略方針</label>
    <type>TextArea</type>
</CustomField>