force-app/main/default/objects/Opportunity/fields/EN_LastMonth_mikomiflag__c.field-meta.xml
<CustomField>
    <fullName>EN_LastMonth_mikomiflag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>前月受注見込みフラグ</label>
    <type>Checkbox</type>
</CustomField>