force-app/main/default/objects/Opportunity/fields/EN_LastMonthzyutyuumikomi__c.field-meta.xml
<CustomField>
    <fullName>EN_LastMonthzyutyuumikomi__c</fullName>
    <label>先月見込み</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EN_zyutyuumikomi</valueSetName>
    </valueSet>
</CustomField>