force-app/main/default/objects/Opportunity/fields/en_mitsumoribi1__c.field-meta.xml
<CustomField>
    <fullName>en_mitsumoribi1__c</fullName>
    <label>見積日①</label>
    <type>Date</type>
</CustomField>