force-app/main/default/objects/Opportunity/fields/en_mitsumoribi2__c.field-meta.xml
<CustomField>
    <fullName>en_mitsumoribi2__c</fullName>
    <label>見積日②</label>
    <type>Date</type>
</CustomField>