force-app/main/default/objects/Opportunity/fields/en_mitsumoribi3__c.field-meta.xml
<CustomField>
    <fullName>en_mitsumoribi3__c</fullName>
    <label>見積日③</label>
    <type>Date</type>
</CustomField>