force-app/main/default/objects/Opportunity/fields/en_mitsumorikingaku3__c.field-meta.xml
<CustomField>
    <fullName>en_mitsumorikingaku3__c</fullName>
    <label>見積金額③</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>