force-app/main/default/objects/Opportunity/fields/EN_mitsumorimemo1__c.field-meta.xml
<CustomField>
    <fullName>EN_mitsumorimemo1__c</fullName>
    <label>見積メモ①</label>
    <length>200</length>
    <type>Text</type>
</CustomField>