force-app/main/default/objects/Opportunity/fields/EN_mitsumorimemo2__c.field-meta.xml
<CustomField>
    <fullName>EN_mitsumorimemo2__c</fullName>
    <label>見積メモ②</label>
    <length>200</length>
    <type>Text</type>
</CustomField>