force-app/main/default/objects/Opportunity/fields/EN_mitsumorimemo3__c.field-meta.xml
<CustomField>
    <fullName>EN_mitsumorimemo3__c</fullName>
    <label>見積メモ③</label>
    <length>200</length>
    <type>Text</type>
</CustomField>