force-app/main/default/objects/Opportunity/fields/en_mokuhyouriekigaku__c.field-meta.xml
<CustomField>
    <fullName>en_mokuhyouriekigaku__c</fullName>
    <label>目標利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>