force-app/main/default/objects/Opportunity/fields/en_NextPeriodCom_ContractGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>en_NextPeriodCom_ContractGrossProfit__c</fullName>
    <formula>IF( VALUE(EN_kanseiki__c) &gt; CurrentPeriod__c,
EN_saisyuzyutyukingaku__c ,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>来期以降完成分_粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>