force-app/main/default/objects/Opportunity/fields/en_NextPeriodCom_GrossProfitMargin__c.field-meta.xml
<CustomField>
    <fullName>en_NextPeriodCom_GrossProfitMargin__c</fullName>
    <formula>IF ( OR(en_NextPeriod_ContractAmount__c = 0)
,0
,en_NextPeriodCom_ContractGrossProfit__c / en_NextPeriod_ContractAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>来期以降完成分_粗利率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>