force-app/main/default/objects/Opportunity/fields/en_opp_nengetsu_mitsumoribi__c.field-meta.xml
<CustomField>
    <fullName>en_opp_nengetsu_mitsumoribi__c</fullName>
    <formula>TEXT ( YEAR ( en_mitsumoribi__c ) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH ( en_mitsumoribi__c )) &amp; &quot;月&quot;</formula>
    <label>年月（見積日）</label>
    <type>Text</type>
</CustomField>