force-app/main/default/objects/Opportunity/fields/EN_OppPhase__c.field-meta.xml
<CustomField>
    <fullName>EN_OppPhase__c</fullName>
    <label>商談フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>訪問</fullName>
            </value>
            <value>
                <fullName>案件入手</fullName>
            </value>
            <value>
                <fullName>単価提示</fullName>
            </value>
            <value>
                <fullName>概算見積</fullName>
            </value>
            <value>
                <fullName>ネゴ(概算見積)</fullName>
            </value>
            <value>
                <fullName>GC側受注確認</fullName>
            </value>
            <value>
                <fullName>積算</fullName>
            </value>
            <value>
                <fullName>現場打合せ</fullName>
            </value>
            <value>
                <fullName>質疑応答</fullName>
            </value>
            <value>
                <fullName>再積算</fullName>
            </value>
            <value>
                <fullName>積算見積</fullName>
            </value>
            <value>
                <fullName>ネゴ(積算見積)</fullName>
            </value>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>