force-app/main/default/objects/Opportunity/fields/EN_OrderNum__c.field-meta.xml
<CustomField>
    <fullName>EN_OrderNum__c</fullName>
    <formula>IF(  ISPICKVAL( EN_zyutyuumikomi__c , &apos;受注&apos;) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月受注数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>