force-app/main/default/objects/Opportunity/fields/EN_rankcomment__c.field-meta.xml
<CustomField>
    <fullName>EN_rankcomment__c</fullName>
    <label>受注確度コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>