force-app/main/default/objects/Opportunity/fields/EN_saisyuzyutyukingaku__c.field-meta.xml
<CustomField>
    <fullName>EN_saisyuzyutyukingaku__c</fullName>
    <formula>IF ( ISBLANK(en_uriagebi__c) , en_zyutyuuararigoukei__c , en_uriageararigaku__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終受注粗利金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>