force-app/main/default/objects/Opportunity/fields/EN_saisyuzyutyuukingaku__c.field-meta.xml
<CustomField>
    <fullName>EN_saisyuzyutyuukingaku__c</fullName>
    <formula>IF (  ISBLANK(en_uriagebi__c) , en_zyutyuukinngakukgoukei__c ,  en_uriagekingaku__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最終受注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>