force-app/main/default/objects/Opportunity/fields/EN_sekisankyouryokuhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_sekisankyouryokuhanteibi__c</fullName>
    <label>積算協力判定日</label>
    <type>Date</type>
</CustomField>