force-app/main/default/objects/Opportunity/fields/en_sesyu__c.field-meta.xml
<CustomField>
    <fullName>en_sesyu__c</fullName>
    <label>施主</label>
    <length>200</length>
    <type>Text</type>
</CustomField>