force-app/main/default/objects/Opportunity/fields/EN_sittyuuhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_sittyuuhanteibi__c</fullName>
    <label>失注判定日</label>
    <type>Date</type>
</CustomField>