force-app/main/default/objects/Opportunity/fields/en_tatemonoyouto__c.field-meta.xml
<CustomField>
    <fullName>en_tatemonoyouto__c</fullName>
    <label>建物用途</label>
    <length>200</length>
    <type>Text</type>
</CustomField>