force-app/main/default/objects/Opportunity/fields/EN_ThisMonthEstimated__c.field-meta.xml
<CustomField>
    <fullName>EN_ThisMonthEstimated__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;受注&apos;) ,en_mitsumorikingaku__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月受注見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>