force-app/main/default/objects/Opportunity/fields/EN_ThisMonthTargetAmount__c.field-meta.xml
<CustomField>
    <fullName>EN_ThisMonthTargetAmount__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;受注&apos;) ,en_zyutyuumokuhyougaku__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月受注目標額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>