force-app/main/default/objects/Opportunity/fields/EN_ThisMonthTargetProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>EN_ThisMonthTargetProfitAmount__c</fullName>
    <formula>IF( ISPICKVAL( EN_zyutyuumikomi__c , &apos;受注&apos;) ,en_mokuhyouriekigaku__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今月受注目標利益額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>