force-app/main/default/objects/Opportunity/fields/EN_tsuikaanken__c.field-meta.xml
<CustomField>
    <fullName>EN_tsuikaanken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加案件</label>
    <type>Checkbox</type>
</CustomField>