force-app/main/default/objects/Opportunity/fields/en_tsuikazyutyukingaku3__c.field-meta.xml
<CustomField>
    <fullName>en_tsuikazyutyukingaku3__c</fullName>
    <label>追加受注金額③</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>