force-app/main/default/objects/Opportunity/fields/EN_tsuikazyutyuu__c.field-meta.xml
<CustomField>
    <fullName>EN_tsuikazyutyuu__c</fullName>
    <formula>en_tsuikazyutyukingaku1__c  +  en_tsuikazyutyukingaku2__c  +  en_tsuikazyutyukingaku3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>追加受注金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>