force-app/main/default/objects/Opportunity/fields/en_tsuikazyutyuuarari1__c.field-meta.xml
<CustomField>
    <fullName>en_tsuikazyutyuuarari1__c</fullName>
    <label>追加受注粗利①</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>