force-app/main/default/objects/Opportunity/fields/en_tsuikazyutyuubi1__c.field-meta.xml
<CustomField>
    <fullName>en_tsuikazyutyuubi1__c</fullName>
    <label>追加受注日①</label>
    <type>Date</type>
</CustomField>