force-app/main/default/objects/Opportunity/fields/en_tsuikazyutyuubi2__c.field-meta.xml
<CustomField>
    <fullName>en_tsuikazyutyuubi2__c</fullName>
    <label>追加受注日②</label>
    <type>Date</type>
</CustomField>