force-app/main/default/objects/Opportunity/fields/en_ukeoityakkouyoteibi__c.field-meta.xml
<CustomField>
    <fullName>en_ukeoityakkouyoteibi__c</fullName>
    <label>請負着工予定日</label>
    <type>Date</type>
</CustomField>