force-app/main/default/objects/Opportunity/fields/en_uriageararigaku__c.field-meta.xml
<CustomField>
    <fullName>en_uriageararigaku__c</fullName>
    <label>売上粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>