force-app/main/default/objects/Opportunity/fields/en_uriagebi__c.field-meta.xml
<CustomField>
    <fullName>en_uriagebi__c</fullName>
    <label>売上日</label>
    <type>Date</type>
</CustomField>