force-app/main/default/objects/Opportunity/fields/en_uriagekingaku__c.field-meta.xml
<CustomField>
    <fullName>en_uriagekingaku__c</fullName>
    <label>売上金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>