force-app/main/default/objects/Opportunity/fields/en_zentaichakoubi__c.field-meta.xml
<CustomField>
    <fullName>en_zentaichakoubi__c</fullName>
    <label>全体着工予定日</label>
    <type>Date</type>
</CustomField>