force-app/main/default/objects/Opportunity/fields/en_zentaisyunkouyoteibi__c.field-meta.xml
<CustomField>
    <fullName>en_zentaisyunkouyoteibi__c</fullName>
    <label>全体竣工予定日</label>
    <type>Date</type>
</CustomField>