force-app/main/default/objects/Opportunity/fields/en_zougenseisankingaku__c.field-meta.xml
<CustomField>
    <fullName>en_zougenseisankingaku__c</fullName>
    <formula>en_uriagekingaku__c -  en_zyutyuukinngakukgoukei__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>増減精算金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>