force-app/main/default/objects/Opportunity/fields/en_zyutyuararigaku__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuararigaku__c</fullName>
    <label>受注粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>