force-app/main/default/objects/Opportunity/fields/en_zyutyukingaku__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyukingaku__c</fullName>
    <label>受注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>