force-app/main/default/objects/Opportunity/fields/EN_zyutyumikomiduki__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyumikomiduki__c</fullName>
    <label>受注見込み月</label>
    <type>Date</type>
</CustomField>