force-app/main/default/objects/Opportunity/fields/en_zyutyuuararigoukei__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuuararigoukei__c</fullName>
    <formula>en_zyutyuararigaku__c  +  en_tsuikazyutyuuarari1__c  +  en_tsuikazyutyuuarari2__c  +  en_tsuikazyutyuuarari3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注粗利合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>