force-app/main/default/objects/Opportunity/fields/en_zyutyuubi__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuubi__c</fullName>
    <label>受注日</label>
    <type>Date</type>
</CustomField>