force-app/main/default/objects/Opportunity/fields/EN_zyutyuuhanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuuhanteibi__c</fullName>
    <label>受注判定日</label>
    <type>Date</type>
</CustomField>