force-app/main/default/objects/Opportunity/fields/EN_zyutyuukaigi1__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuukaigi1__c</fullName>
    <label>受注会議①</label>
    <type>TextArea</type>
</CustomField>