force-app/main/default/objects/Opportunity/fields/EN_zyutyuukaigi2__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuukaigi2__c</fullName>
    <label>受注会議②</label>
    <type>TextArea</type>
</CustomField>