force-app/main/default/objects/Opportunity/fields/en_zyutyuukakudo__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuukakudo__c</fullName>
    <label>受注確度</label>
    <length>200</length>
    <type>Text</type>
</CustomField>