force-app/main/default/objects/Opportunity/fields/EN_zyutyuukakuteihanteibi__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuukakuteihanteibi__c</fullName>
    <label>受注確定判定日</label>
    <type>Date</type>
</CustomField>