force-app/main/default/objects/Opportunity/fields/en_zyutyuuki__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuuki__c</fullName>
    <formula>IF ( MONTH(en_zyutyuubi__c) &lt; 7 ,
TEXT(YEAR(en_zyutyuubi__c)) &amp; &apos;年6月期&apos;,
	TEXT(YEAR(en_zyutyuubi__c)+1) &amp; &apos;年6月期&apos;		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注期</label>
    <type>Text</type>
</CustomField>