force-app/main/default/objects/Opportunity/fields/en_zyutyuukinngakukgoukei__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuukinngakukgoukei__c</fullName>
    <formula>en_zyutyukingaku__c  +  en_tsuikazyutyukingaku1__c + en_tsuikazyutyukingaku2__c + en_tsuikazyutyukingaku3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>