force-app/main/default/objects/Opportunity/fields/EN_zyutyuumikomiflag__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuumikomiflag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>今月受注見込みフラグ</label>
    <type>Checkbox</type>
</CustomField>