force-app/main/default/objects/Opportunity/fields/EN_zyutyuutsuki__c.field-meta.xml
<CustomField>
    <fullName>EN_zyutyuutsuki__c</fullName>
    <formula>TEXT(MONTH(en_zyutyuubi__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注月</label>
    <type>Text</type>
</CustomField>