force-app/main/default/objects/Opportunity/fields/EN_zyuuyoubukken__c.field-meta.xml
<CustomField>
    <fullName>EN_zyuuyoubukken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重点</label>
    <type>Checkbox</type>
</CustomField>