force-app/main/default/objects/Opportunity/fields/EstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAmount__c</fullName>
    <formula>ST_unitprice__c*TotalOpportunityQuantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年間売上想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>