force-app/main/default/objects/Opportunity/fields/ExpectedforthistermRevenuPlan__c.field-meta.xml
<CustomField>
    <fullName>ExpectedforthistermRevenuPlan__c</fullName>
    <label>今期売上計画額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>