force-app/main/default/objects/Opportunity/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>目標商談数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>