force-app/main/default/objects/Opportunity/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>分野</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>①建設・住宅</fullName>
            </value>
            <value>
                <fullName>②土木・インフラ</fullName>
            </value>
            <value>
                <fullName>③設備</fullName>
            </value>
            <value>
                <fullName>④レジャー</fullName>
            </value>
            <value>
                <fullName>⑤輸送・自動車</fullName>
            </value>
            <value>
                <fullName>⑤電気・電子</fullName>
                <label>⑥電気・電子</label>
            </value>
            <value>
                <fullName>⑥農水産</fullName>
                <label>⑦農水産</label>
            </value>
            <value>
                <fullName>⑦消費財</fullName>
                <label>⑧消費財</label>
            </value>
            <value>
                <fullName>⑧その他</fullName>
                <label>⑨その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>